--- a/css/styles.css
+++ b/css/styles.css
@@ -5,10 +5,11 @@ body{
   padding-left: 50px;
   padding-right: 50px;
   padding-top: 20px;
+  font-family: 'Advent Pro', sans-serif;
 }
 .background {
 
-  background-image: url("images/background2.jpg");
+  background-image: url("images/geek.jpg");
   height: 100%;
   background-position: center;
   background-repeat: no-repeat;
@@ -31,21 +32,24 @@ border: 2px solid black;
 .column {
     float: left;
     padding: 50px;
+
 }
 
 
 .column.side {
     width: 20%;
+    font-family: 'Barlow', sans-serif;
 }
 
 
 .column.middle {
     width: 30%;
+    font-family: 'Barlow', sans-serif;
 }
 
 .portfolio {
-  background-color: lightgreen;
-  border: 2px solid red;
+  background-color: #CBD56D;
+  border: 1px solid black;
 }
 .portfolio li{
   padding: 5px;
@@ -61,6 +65,7 @@ border: 2px solid black;
 .top{
   margin-right: 45px;
   width:87%;
+
 }
 .links {
   text-decoration-color: pink;
@@ -68,4 +73,7 @@ border: 2px solid black;
 .contacts{
   text-decoration: underline;
   color: blue;
+}
+h1,h2 {
+  font-family: 'Advent Pro', sans-serif;
 }
